# autoflake8

./: .git-blame-ignore-revs  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  README.rst  autoflake.py  pyproject.toml  setup.py  test_autoflake.py  test_fuzz.py  test_fuzz_pypi.py
.github/workflows/: fuzz.yaml  main.yaml  publish.yaml
autoflake8/: __init__.py  cli.py  fix.py  multiline.py  pending_fix.py
scripts/: check_version.py  fix_version.py  fuzz.sh  test_fuzz.py
tests/: autoflake_test.py  conftest.py  fix_test.py  multiline_test.py  pending_fix_test.py  system_test.py
